﻿drkns 12.04.2015 15:18:07 +0200 - build 4342

1. С форума: падение при far /import

2. Рефакторинг.

drkns 11.04.2015 23:04:41 +0200 - build 4341

1. Рефакторинг.

2. Warnings.

zg 10.04.2015 13:29:09 +0200 - build 4340

1. уточнение 4337: сбрасывалось выделение при редактировании.

2. нажатие numlock, capslock, scrolllock снимало признак неизменённости в полях ввода.

3. gcc warnings.

zg 10.04.2015 01:25:50 +0200 - build 4339

1. при ненулевом FarDialogItem.MaxLength некорректно инициализировался элемент диалога.

svs 09.04.2015 06:54:08 +0300 - build 4338

1. SQLite 3.8.9

zg 09.04.2015 03:05:55 +0200 - build 4337

1. изолирована обработка нажатия CtrlAltShift.

drkns 05.04.2015 19:07:30 +0200 - build 4336

1. Рефакторинг. Немного переименований и перенос некоторых функций.

drkns 03.04.2015 20:55:27 +0200 - build 4335

1. 0002980: Неисправности в меню "Code pages".

zg 03.04.2015 14:10:08 +0200 - build 4334

1. уточнение 4330.

zg 03.04.2015 13:55:43 +0200 - build 4333

1. уточнение 4332.

zg 03.04.2015 02:57:53 +0200 - build 4332

1. 0002979: Редактирование любых файлов без потерь в режиме UTF-8.

drkns 02.04.2015 23:15:07 +0200 - build 4331

1. Рефакторинг.

2. Из меню дополнения в комстроке не вызывалось меню плагинов.

zg 02.04.2015 16:15:43 +0200 - build 4330

1. с форума: Получить содержимое ком. строки плагином из юзер меню.

w17 01.04.2015 20:26:38 +0300 - build 4329

1. Некорректно работал поиск по словам Find file, если слово попадало ровно на конец блока.

shmuel 29.03.2015 20:49:04 +0200 - build 4328

1. Уточнение 4261.

drkns 28.03.2015 16:51:12 +0200 - build 4327

1. Рефакторинг.

w17 26.03.2015 13:57:16 +0300 - build 4326

1. Уточнение 4324

w17 26.03.2015 13:51:15 +0300 - build 4325

1. Уточнение 4324

w17 25.03.2015 13:23:12 +0300 - build 4324

1. Experimental: Продолжение 3717 (M#2208: Запоминать, в какой папке была запущена команда).
   Новый параметр конфигурации System.PerFolderCmdHistory.